# python-crypto-currency-exchange-library

./: README.md  pyproject.toml
.github/workflows/: build_and_deploy.yaml
src/pccxl/common/: utils.py
src/pccxl/providers/kucoin/: exceptions.py  validations.py
src/pccxl/providers/kucoin/clients/: perp.py
