[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pccxl"
version = "0.0.6"
authors = [
  { name="Yaroslav Beshta", email="yaroslav.beshta@gmail.com" },
]
description = "python package that enables access to multiple cryptocurrency exchanges focused on order logic"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/pccxl"
"Bug Tracker" = "https://github.com/pypa/pccxl/issues"
